build/log/idf_py_stderr_output_328982
Command: make -j 18 all
/home/zen_vega/mcu_projects/gong/main/gong.c: In function 'wifi_init_static_ip':
/home/zen_vega/mcu_projects/gong/main/gong.c:76:9: error: implicit declaration of function 'ip4addr_aton'; did you mean 'esp_ip4addr_aton'? [-Wimplicit-function-declaration]
   76 |         ip4addr_aton(EXAMPLE_STATIC_IP_ADDR, &ip_info.ip);
      |         ^~~~~~~~~~~~
      |         esp_ip4addr_aton
/home/zen_vega/mcu_projects/gong/main/gong.c: At top level:
/home/zen_vega/mcu_projects/gong/main/gong.c:12:20: warning: 'TAG' defined but not used [-Wunused-variable]
   12 | static const char *TAG = "webserver";
      |                    ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/gong.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7161: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
